Started First Job

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <title></title>
+    <head>My Profesional Resume</head>
+    <title>A Journey of Employment</title>
     <body>
-    </body>    
+    <ul>
+        <li>Avanti's Pizzeria</li>
+        <li>Pioneer Credit Recovery</li>    
+        <li>Safeway</li>
+        <li>Ristorante Picolinos</li>
+        <li>???</li>
+    </ul>    
+        <main>
+            <h1>Avanti's Pizzeria</h1>
+            <h2>Medina, N.Y.</h3>
+            <h3>2015-2018</h3>
+            <img src="http://www.avantipizzapasta.com/images/pizza3.jpg.jpg" </img>
+                <p> Avanti's was my first job in high school. Even though I had worked on and off for my family's farm for years,<br> 
+                    this was my first taste of real employment. I learned the in's and out's of restaurant service work and an <br>     
+                    introduction to the joys of the customer service industry. Little did I know this job wold lay the groundwork for <b>
+                    my current career      </p>
+
+            <article>
+            </article>
+        </main>    
+    </body> 
+    <footer>
+
+    </footer>   
 </html>    
