--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <title>A Journey of Employment</title>
     <body>
     <ul>
-        <li>Avanti's Pizzeria</li>
+        <li><a href="#Avanti's"> Avanti's Pizzeria</a></li>
         <li>Pioneer Credit Recovery</li>    
         <li>Safeway</li>
         <li>Ristorante Picolinos</li>
         <li>???</li>
     </ul>    
         <main>
+            <a name="Avanti's'"></a>
             <h1>Avanti's Pizzeria</h1>
             <h2>Medina, N.Y.</h3>
             <h3>2015-2018</h3>
             <img src="http://www.avantipizzapasta.com/images/pizza3.jpg.jpg" </img>
                 <p> Avanti's was my first job in high school. Even though I had worked on and off for my family's farm for years,<br> 
                     this was my first taste of real employment. I learned the in's and out's of restaurant service work and an <br>     
-                    introduction to the joys of the customer service industry. Little did I know this job wold lay the groundwork for <b>
-                    my current career      </p>
+                    introduction to the joys of the customer service industry. Little did I know this job wold lay the groundwork for <br>
+                    my current career. My time there ended when I started college, though i still visited when I was home from school.</p>
 
             <article>
             </article>
