Finished The Landmark

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
                 <a name="Landmark"></a>
                 <h1>The Ballard Landmark</h1>
                 <h2>Seattle W.A.</h2>
-                <h3>2012-2013</h3>     
+                <h3>2012-2013</h3> 
+            <img src="http://www.marketstreetsingers.org/gallery/2008/landmark_xmas08b.jpg"></img>  
+                <p>The next thing I learned about Seattle is that all the nice things come at a cost, that cost being a 300% increase<br>
+                   in rent. So i needed a second, and possibly a third, source of income. I figured I'd use my high school restaurant<br>
+                   experience and try retirement homes. The job itself I didnt really care for, But the people made it all worth it.<br>
+                   I built friendships with some of the residents that I still keep with to this day. Sadly some have passed, but the<br>
+                   relationships I made with those residents will stay with me forever.
+                <p>   
+
 
         </main>    
     </body> 
